hphp/hack/test/typecheck/xhp_modifier/xhp_modifier_require_order.php
<?hh

// Blow up if final comes after xhp.
xhp final class foo {}
